--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -80,6 +80,7 @@
  \usepackage{charter}
  \usepackage[scaled=.92]{helvet}
 \usepackage{siunitx}
+\usepackage{amsfonts}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -157,6 +158,9 @@
 \newcommand*{\CO}{\mathcal{O}}      % Cal-O
 \newcommand*{\CS}{\mathcal{S}}
 \newcommand*{\CT}{\mathcal{T}}
+
+\newcommand*{\FF}{\mathbb{F}}
+\newcommand*{\PP}{\mathbb{P}}
 
 \newcommand*{\id}{\mathrm{id}}             % Identität
 \newcommand*{\Stab}{\mathrm{Stab}}
@@ -4337,7 +4341,7 @@ Etwa 60 Jahre nach \textsc{Borsuk}s Frage wurden erste Gegenbeispiele für
 große Dimensionen gefunden. \textsc{Kahn} und \textsc{Kalai} fanden 1993 eines
 für $n=1325$.
 
-%satz 4
+%satz 3
 \begin{satz}[A.\,Nill, Noga Alon]
   Es gibt eine endliche Teilmenge von $\R^{946}$, die nicht in $947$, sogar
   nicht in $1649$, Teilmengen kleineren Durchmessers zerlegt werden kann.
@@ -4348,7 +4352,51 @@ für $n=1325$.
       x_{1}=1\wedge2\mid\card\Set{i\in\{1,\dotsc,m\} | x_{i}=-1}}$.
      \item Fakt: Ist $G\subseteq F$, die kein Paar orthogonaler Vektoren
       enthält, so gilt $\card(G)\leq\sum_{i=0}^{p-1} \binom{m-1}{i}$.
-      \todo{Beweis vom Fakt kommt morgen}
+
+      Dazu:
+      \begin{enumerate}[(i)]
+       \item $\forall a,b\in G\colon(a\neq b\Rightarrow\langle
+	a,b\rangle\not\equiv0\pmod{p})$, denn nehmen wir an, dass $\langle
+	a,b\rangle\equiv0\pmod{p}$. Dann ist $\langle a,b\rangle\in\{\pm4p,
+	\pm3p,\pm2p, \pm p,0\}$. Für alle $a,b\in G$ ist das Skalarprodukt
+	durch vier teilbar. Entsteht $b_{2}$ aus $b_{1}$ durch Änderung der
+	Vorzeichen in zwei Koordinaten, so folgt, $\langle a,b_{1}\rangle-
+	\langle a,b_{2}\rangle\in\{\pm4,0\}$. Es kann nun $a$ ungleich zu $-b$
+	sein, nach der Definition von $F$. Also ist $\langle a,b\rangle\neq-4p$.
+	Da $a\neq b$ ist $\langle a,b\rangle\neq4p$ und nach der Wahl von $G$
+	ist auch $\langle a,b\rangle\neq0$. \lightning{}
+
+	Zu jedem $a\in G$ definieren wir ein Polynom $P_{a}(x)$ über dem
+	Körper $\FF_{p}$ mit $p\in \PP$ in den Variablen $x=(x_{1},\dotsc, x_{m})$ durch
+	$P_{a}(x)\coloneqq\prod_{i=1}^{p-1} (\langle a,x\rangle-i)$. Dann
+	ergibt sich:
+       \item $\forall a,b\in G\colon(a\neq b\Rightarrow P_{a}(b)=0)$, denn das
+	ergibt sich aus der obigen Aussage.
+       \item $\forall a\in G\colon(P_{a}(a)\neq0)$, denn wegen der
+	Nullteilerfreiheit des Körpers $\FF_{p}$ ergibt sich die Aussage.
+
+	Ersetze nun jedes $P_{a}(x)$ durch ein Polynom
+	$\overline{P_{a}}(1,x_{2},\dotsc, x_{m})$, indem $x_{1}$ durch $1$
+	ersetzt wird und außerdem $x_{i}^{2}=1$ für $2\leq i\leq m$ gesetzt
+	wird. Dann ist $\overline{P_{a}}$ ein Polynom in den Variablen
+	$(x_{2},\dotsc, x_{m})$ über $\FF_{p}$ vom Grad $\leq p-1$, wobei die
+	einzelnen Variablen höchstens linear auftreten. Damit liegt
+	$\Set{\overline{P_{a}} | a\in G}$ in $\FF_{p}$"~Vektorraum, der von
+	den Polynomen $1; x_{2},\dotsc, x_{m}; x_{2}x_{3},\dotsc,
+	x_{m-1}x_{m}; \dotso; x_{2}x_{3}\cdot\dotso \cdot x_{p},\dotsc,
+	x_{m-p+2}\cdot\dotso \cdot x_{m}$ aufgespannt wird. Damit folgt:
+	\begin{gather}
+	  \label{eq:28}\dim\left(\spn\Set{\overline{P_{a}} | a\in
+	     G}\right)\leq\sum_{i=0}^{p-1} \binom{m-1}{i}
+	\end{gather}
+	Wegen $\overline{P_{a}}(b)= P_{a}(b)$ für $a\in G$ gelten die Punkte
+	(ii) und (iii) für die Poynome $\overline{P_{a}}(1,x_{2},\dotsc,
+	x_{m})$ analog. Also ist $\Set{\overline{P_{a}} | a\in G}$ linear
+	unabhängig. Denn für $\sum_{a\in G}
+	\lambda_{a}\overline{P_{a}}(x)\equiv0$ folgt mit $x=b$, dass
+	$\lambda_{b}=0$. Also ist $\dim\left(\spn\Set{\overline{P_{a}} | a\in
+	G}\right)= \card(G)$ und damit folgt der Fakt leicht.
+      \end{enumerate}
      \item für $x=(x_{1},\dotsc, x_{m})= (1,x_{2},\dotsc, x_{m})\in F$ sei
       $\phi(x)= (x_{1}^{2}, x_{2}^{2},\dotsc, x_{m}^{2}, \sqrt{2}x_{1}x_{2},
       \sqrt{2}x_{1}x_{3},\dotsc,
@@ -4388,6 +4436,153 @@ für $n=1325$.
     \end{itemize}
   \end{proof}
 \end{satz}
+
+%Vorlesung vom 5.7.2011
+\begin{bemerk}
+  Es sind \textsc{Borsuk}"~Gegenbeispiele in allen Dimensionen $n\geq298$
+  bekannt. Offen ist die Frage für $4\leq n\leq297$. 
+\end{bemerk}
+
+\section{Das Borsuk"=Ulam"=Theorem}
+
+\begin{defini}
+  Es sei $\CS^{n}\coloneqq\bd(B(0,1))\subseteq\R^{n+1}$ die Einheitssphäre in
+  $\R^{n+1}$.
+  \begin{enumerate}
+   \item $x,y\in\CS^{n}$ heißen \highl{antipodisch}, wenn $x=-y$.
+   \item Eine Abbildung $f\colon\CS^{n}\rightarrow X$ mit $X\subseteq\R^{k}$
+    heißt \highl{antipodentreu}, wenn antipodische Punkte auf antipodische
+    Punkte abgebildet werden: $\forall x\in\CS^{n}\colon(-f(x)=f(-x))$.
+  \end{enumerate}
+\end{defini}
+
+%satz 4
+\begin{satz}\label{satz:4.4}
+  Für jedes $n\geq0$ sind folgende Aussagen äquivalent:
+  \begin{enumerate}[(i)]
+   \item Ist $f\colon\CS^{n}\rightarrow\R^{n}$ stetig, dann gibt es einen
+    Punkt der Sphäre $x\in\CS^{n}$ mit $f(x)= f(-x)$.
+   \item Ist eine Abbildung $f\colon \CS^{n}\rightarrow\R^{n}$ stetig und
+    antipodentreu, so gibt es einen Punkt, der auf $0$ abgebildet wird.
+   \item Es gibt keine stetige antipodentreue Abbildung
+    $f\colon\CS^{n}\rightarrow\CS^{n-1}$.
+   \item Wird $\CS^{n}$ durch $n+1$ abgeschlossene Mengen $F_{1},\dotsc,
+    F_{m+1}$ überdeckt, so enthält wenigstens eine dieser Mengen ein Paar
+    antipodischer Punkte.
+  \end{enumerate}
+  \begin{proof}
+    Für $n=0$ sind die Eigenschaften (i), (ii) und (iv) sind trivial und (iii)
+      ist "`leer"'. Sei nun $n\geq1$.
+    \begin{itemize}
+     \item [(i)$\Rightarrow$(iv)] Wir definieren zur Überdeckung
+      $F_{1},\dotsc, F_{n+1}$ eine stetige Abbildung
+      $f\colon\CS^{n}\rightarrow\R^{n}$ mit
+      $f(x)\coloneqq(d(x,F_{1}),\dotsc,d(x,F_{n}))$. Dabei ist $d(x,F)=
+      \inf_{y\in F} d(x,y)$. Aus (i) folgt die Existenz eines
+      $x_{0}\in\CS^{n}$ mit $f(x_{0})= f(-x_{0})$.
+      \begin{enumerate}[1.\,F{a}ll]
+       \item Es gibt ein $i\in\{1,\dotsc,n\}$, wobei die $i$"~te Koordinate
+	von $f(x_{0})= f(-x_{0})$ Null ist. Da $F_{i}$ eine abgeschlossene
+	Menge ist, folgt, dass $x_{0}$ und $-x_{0}$ in $F_{i}$ liegen.
+       \item Alle Koordinaten von $f(x_{0})= f(-x_{0})$ sind ungleich Null.
+	Damit sind $x_{0}, -x_{0}\notin F_{i}$ für $1\leq i\leq n$ und wegen
+	der Überdeckungseigenschaft ist $x_{0}, -x_{0}\in F_{n+1}$.
+      \end{enumerate}
+     \item [(iv)$\Rightarrow$(iii)] Der Beweis wird indirekt geführt. Dazu
+      nehmen wir an, dass (iii) nicht gilt. Also gibt es eine stetige
+      antipodentreue Abbildung $f\colon\CS^{n}\rightarrow\CS^{n-1}$. Wir
+      wissen, dass $\CS^{n-1}$ durch $n+1$ abgeschlossene Teilmengen
+      $F_{1},\dotsc, F_{n+1}\subseteq\CS^{n-1}$ überdeckbar, die alle frei von
+      Paaren antipodischer Punkte sind.. Das war eine
+      Beobachtung zur \textsc{Borsuk}"~Vermutung. Dann ist $\CS^{n}$ durch die
+      abgeschlossenen Mengen $f^{-1}(F_{1}),\dotsc,f^{-1}(F_{n+1})$ überdeckt
+      und diese Mengen enthalten keine Paare antipodischer Punkte. Dies ist
+      ein Widerspruch zu (iv).
+     \item [(iii)$\Rightarrow$(ii)] Wir nehmen an, dass es eine stetige und
+      antipodentreue Abbildung $f\colon\CS^{n}\rightarrow\R^{n}$ mit
+      $f(x)\neq0$ für alle $x\in\CS^{n}$ gibt. Dann ist die Abbildung
+      $g\coloneqq\frac{f}{\norm{f}}\colon\CS^{n}\rightarrow\CS^{n-1}$ stetig
+      und antipodentreu. Dies steht aber im Widerspruch zu (iii).
+     \item [(ii)$\Rightarrow$(i)] Sei $f\colon\CS^{n}\rightarrow\R^{n}$ stetig
+      und wir definieren $g(x)\coloneqq f(x)-(f-x)$. Diese Abbildung ist
+      stetig und antipodentreu.  Also existiert ein $x_{0}\in\CS^{n}$ mit
+      $g(x_{0})=0$, also ist $f(x_{0})= f(-x_{0})$.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+%satz 5
+\begin{satz}[Borsuk"=Ulam"=Theorem]
+  Die Aussagen aus dem \autoref{satz:4.4} sind für alle $n\geq1$ wahr.
+  \begin{proof}
+    Wir zeigen die Eigenschaft (ii) aus dem \autoref{satz:4.4}. Sei
+    $f\colon\CS^{n}\rightarrow\R^{n}$ stetig und antipodentreu. Dann ist zu
+    zeigen, dass es ein $x\in\CS^{n}$ mit $f(x)=0$ gibt. Wir gehen vom
+    Gegenteil aus. Wir betrachten die Abbildung
+    $g\colon\CS^{n}\rightarrow\R^{n}$ mit $g(x_{1},\dotsc,
+    x_{n+1})\coloneqq(x_{1},\dotsc, x_{n})$. Die Nullstellen von $g$ sind
+    $x_{N}=(0,\dotsc,0,1)$ und $x_{S}=(0,\dotsc,0,-1)$ und die Abbildung ist
+    stetig sowie antipodentreu. Wir setzen $X\coloneqq\CS^{n}\times[0,1]$ und
+    definieren $F\colon X\rightarrow\R^{n}$ mit $F(x,t)= (1-t)g(x)+ t\cdot
+    f(x)$. Die Antipodentreue von $f$ und $g$ liefert die Antipodentreue von
+    $F$.
+    \missingfigure{Bild von Zylinder}
+    Wir studieren die Nullstellen von $F$ und erhalten die Menge
+    $N=\Set{(x,t)\in X | F(x,t)=0}$.
+    \begin{enumerate}[(i)]
+     \item $(x,t)\in N\Leftrightarrow(x-,t)\in N$
+     \item $N\cap(\CS^{n}\times\{0\})=\{(x_{N},0), (x_{S,0})\}$
+     \item $N\cap(\CS^{n}\times\{1\})= \emptyset$, da $f$ ohne Nullstellen.
+    \end{enumerate}
+    Die Abbildung $F$ bildet eine $n+1$"~dimensionale Mannigfaltigkeit $X$ in
+    den $n$"~dimensionalen Raum ab. Intuitiv ist zu erwarten, dass $N$ als
+    Mannigfaltigkeit immer eindimensional. In der Tat kann man o.\,B.\,d.\,A.
+    (mit Hilfe einer kleinen Störung von $f$, die (i), (ii) und (iii) nicht
+    beeinflussen) annehmen:
+    \begin{itemize}
+     \item [(iv)] $N$ besteht aus einfach geschlossenen Jordankurven
+      $\CS^{n}\times(0,1)$ und aus Jordanbögen (Pfaden), deren Enden in
+      $\CS^{n}\times\{0\}$ oder $\CS^{n}\times\{1\}$ liegen. Also gibt es
+      einen Jordanbogen in $N$ von $(x_{N},0)$ nach $(x_{S},0)$. Aufgrund der
+      Eigenschaft (i) ergibt sich damit ein Widerspruch.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+\begin{folg}[Brouwerscher Fixpunktsatz]
+  Ist $M$ eine topologische $n$"~Zelle mit $n\geq1$, so hat jede stetige
+  Abbildung $f\colon M\rightarrow M$ einen Fixpunkt.
+  \begin{proof}
+    Wir nehmen an, dass $f$ keine Fixpunkte hat. Sei $\phi\colon
+    B(0,1)\subseteq\R^{n}\rightarrow M$ ein Homöomorphismus. Dann können wir
+    auch $\tilde{f}\colon B(0,1)\rightarrow B(0,1)$ betrachten mit
+    $\tilde{f}\coloneqq\phi^{-1}f\phi$. Die Abbildung ist stetig und
+    fixpunktfrei. Jeder Fixpunkt $x_{0}$ von $\tilde{f}$ liefert Fixpunkte
+    $\phi(x_{0})$ von $f$. Weiterhin definieren wir die Abbildung $g\colon
+    B(0,1)\rightarrow\CS^{n-1}$. Dabei ist $g(x)$ der Durchstosspunkt des
+    Strahls, der in $\tilde{f}(x)$ und durch $x$ verläuft mit $\CS^{n-1}=
+    \bd(B(0,1))$. Wir wissen, $g$ ist stetig und $g|_{\CS^{n-1}}=\id_{\CS^{n-1}}$ ist
+    antipodentreu. Dies ist ein Widerspruch zu der Aussage: Es gibt keine
+    stetige Abbildung $f\colon B(0,1)\rightarrow\CS^{n-1}$ derart, dass
+    $g|_{\CS^{n-1}}$ antipodentreu ist. Diese Aussage lässt sich wie folgt
+    zeigen: Wir betrachten eine Projektion $\pi\colon\Set{(x_{1},\dotsc,
+    x_{n+1})\in\CS^{n} | x_{n+1}\geq0}\rightarrow B(0,1)= \Set{x\in\R^{n} |
+    \norm{x}\leq1}$ mit $\pi(x_{1},\dotsc, x_{n+1})\coloneqq(x_{1},\dotsc,
+    x_{n})$. Dann ist $\pi$ ein Homöomorphismus der "`oberen Halbsphäre"' von
+    $\CS^{n}$ auf $B(0,1)\subseteq\R^{n}$. Nun nehmen wir an, dass die zu
+    beweisende Aussage nicht gilt. Also existiert eine stetige Abbildung
+    $g\colon B(0,1)\rightarrow\CS^{n-1}$ derart, dass $g|_{\CS^{n-1}}$
+    antipodentreu ist. Wir betrachten
+    $\tilde{g}\colon\CS^{n}\rightarrow\CS^{n-1}$ mit $g(x)\coloneqq
+    \begin{cases}
+      g(\pi(x))& \text{obere Halbsphäre}\\
+      -g(\pi(-x))& \text{untere Halbsphäre}
+    \end{cases}$. Die Abbildung ist antipodentreu, da $g|_{\CS^{n-1}}$
+    antipodentreu ist, und außerdem stetig. Dies ist ein Widerspruch zu
+    Eigenschaft (iii) aus \autoref{satz:4.4}.
+  \end{proof}
+\end{folg}
+
 
 \clearpage
 \appendix
