Zeichnungen zu Satz 9.2
git-svn-id: https://svn.lug-jena.de/uni-skripte@3418 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -2899,20 +2899,21 @@ Sei $R$ ein Ring.
   Für $P\in\vorunten{R}\kat{Mod}$ sind äquivalent:
   \begin{enumerate}[(1)]
    \item $P$ ist zu einem direkten Summanden eines freien $R$-Moduls isomorph.
-
-    \begin{tikzpicture}
-      \node (p) {$P$};
-      \node [below=1.5cm of p] (n) {$N$};
-      \node [left=2cm of n] (m) {$M$};
-      \node [right=2cm of n] (null) {$0$};
-      \draw[->,dotted] (p) edge node (h) [left]{$h$} (m);
-      \draw[->]
-      (p) edge node (g) [right]{$g$} (n)
-      (m) edge node (f) [above]{$f$} (n)
-      (n) edge node (nien) {} (null);
-    \end{tikzpicture}
    \item Zu jedem $R$"~Epimorphismus $f\colon M\rightarrow N$ und jedem
     $g\in\Hom_{R}(P,N)$ existiert ein $h\in\Hom_{R}(P,M)$ mit $g=f\circ h$.
+
+    \begin{center}
+      \begin{tikzpicture}
+        \node (p) {$P$};
+        \node [below=1.0cm of p] (n) {$N$};
+        \node [left=1cm of n] (m) {$M$};
+        \node [right=1cm of n] (null) {$0$};
+        \draw[->,dotted] (p) edge node (h) [left]{$h$} (m);
+        \draw[->] (p) edge node (g) [right]{$g$} (n) (m) edge node (f)
+        [above]{$f$} (n) (n) edge node (nien) {} (null);
+      \end{tikzpicture}
+    \end{center}
+
    \item Jede kurze exakte Sequenz der Form:
     \begin{gather}
       \label{eq:9.5}
@@ -2932,11 +2933,37 @@ Sei $R$ ein Ring.
       $k\left(\sum_{b\in B} r_{b}b\right)\coloneqq\sum_{b\in B} r_{b}\cdot
       m_{b}$ eine $R$"~lineare Abbildung und $f\circ k= g\circ p_{1}$. Daher:
       $h\colon k\circ q_{1}\in\Hom_{R}(P,M)$ und $f\circ h=f\circ k\circ
-      q_{1}= g\circ p_{1}\circ q_{1}=g$
-     \item [(ii)$\Rightarrow$(iii)] Sei (ii) erfüllt und $0\rightarrow
+      q_{1}= g\circ p_{1}\circ q_{1}=g$.
+      \begin{center}
+      \begin{tikzpicture}
+        \node (p) {$P$};
+        \node [above=1cm of p] (F) {$F$};
+        \node [below=1cm of p] (n) {$N$};
+        \node [left=1cm of n] (m) {$M$};
+        \node [right=1cm of n] (null) {$0$};
+        \draw[->,dotted] (p) edge node (h) [left]{$h$} (m);
+        \draw[->] (p) edge node (g) [right]{$g$} (n) (m) edge node (f)
+        [above]{$f$} (n) (n) edge node (nien) {} (null);
+        \draw[->] (F) edge node (p1) [right] {$p_{1}$} (p);
+        \draw[->,dotted] (F) edge node (k) [left] {$k$} (m);
+      \end{tikzpicture}
+    \end{center}
+  \item [(ii)$\Rightarrow$(iii)] Sei (ii) erfüllt und $0\rightarrow
       L\xrightarrow{f}M\xrightarrow{g}P\rightarrow0$ exakt in
       $\vorunten{R}\kat{Mod}$. Dann existiert $h\in\Hom_{R}(P,M)$ mit $g\circ
       h= \id_{P}$. Also zerfällt die Folge.
+
+      \begin{center}
+        \begin{tikzpicture}
+          \node (p) {$P$};
+          \node [below=1cm of p] (n) {$P$};
+          \node [left=1cm of n] (m) {$M$};
+          \node [right=1cm of n] (null) {$0$};
+          \draw[->,dotted] (p) edge node (h) [left]{$h$} (m);
+          \draw[->] (p) edge node (g) [right]{$\id_{P}$} (n) (m) edge
+          node (f) [above]{$g$} (n) (n) edge node (nien) {} (null);
+        \end{tikzpicture}
+      \end{center}
      \item [(iii)$\Rightarrow$(i)] Sei (iii) erfüllt. Es existieren ein freier
       $R$"~Modul $F$ und ein $R$"~Epimorphismus $g\colon F\rightarrow P$.
       Wegen (iii) zerfällt die kurze exakte Sequenz $0\rightarrow\ker(g)
@@ -4551,10 +4578,30 @@ Sei $R$ ein Ring.
      \item Seien $I,I'\trianglelefteq R$ mit $I\subseteq I'$. Dann ist
       $h\colon R/I\rightarrow R/I'$ mit $r+I\mapsto r+I'$ ein
       $R$"~Epimorphismus. Daher: $\Phi(h)\colon\Phi(R/I)\rightarrow\Phi(R/I')$
-      ein $S$"~Epimorphismus.
+      ein $S$"~Epimorphismus, d.\,h. $\Gamma
+      I=\Ann_{S}(\Phi(R/I))\subseteq\Ann_{S}(\Phi(R/I'))= \Gamma I'$.
+     \item folgt aus (i)
     \end{enumerate}
   \end{proof}
 \end{satz}
+
+%bem 15.7
+\begin{bemerk}
+  Sei $R\approx S$ wie oben. Dann gilt:
+  \begin{enumerate}
+   \item $R$ einfach $\Leftrightarrow S$ einfach.
+   \item $\Gamma(J(R))= J(S)$. Denn für jeden einfachen $S$"~Modul ist $\Psi
+    N$ ein einfacher $R$"~Modul, d.\,h. $J(R)\cdot\Psi N=0$. Daher existiert
+    ein $R$"~Epimorphismus $f\colon R/J(R)\rightarrow\Psi N$. Also ist
+    $\Phi(f)\colon\Phi(R/J(R))\rightarrow\Phi\Psi N\simeq N$ ein
+    $S$"~Epimorphismus. Folglich ist $\Gamma(J(R))=
+    \Ann_{S}(\Phi(R/J(R)))\subseteq\Ann_{S}(N)$.  Da $N$ beliebig ist, folgt
+    $\Gamma(J(R))\subseteq J(S)$. Analog ist $\Delta(J(S))\subseteq J(R)$,
+    also $\Gamma(J(R))\subseteq J(S)=
+    \Gamma(\Delta(J(S)))\subseteq\Gamma(J(R))$, d.\,h.
+    $J(R)\subseteq\Delta(J(S))$.
+  \end{enumerate}
+\end{bemerk}
 
 \clearpage
 \appendix
