--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -3327,7 +3327,20 @@ Sei $R$ ein Ring.
   Für $Q\in\vorunten{R}\kat{Mod}$ sind äquivalent:
   \begin{enumerate}
    \item Zu jedem $R$"~Monomorphismus $f\colon M\rightarrow N$  und jedem
-    $g\in\Hom_{R}(M,Q)$ existiert ein $h\in\Hom_{R}(N,Q)$ mit $g=h\circ f$.
+    $g\in\Hom_{R}(M,Q)$ existiert ein $h\in\Hom_{R}(N,Q)$ mit
+    $g=h\circ f$.
+    \begin{center}
+      \begin{tikzpicture}
+        \node (M) {$M$};
+        \node [left=1cm of M] (null) {$0$};
+        \node [right=1cm of M] (N) {$N$};
+        \node [below=1.5cm of M] (Q) {$Q$};
+        \draw[->] (null) edge node (nn) {} (M);
+        \draw[->] (M) edge node (f) [above] {$f$} (N);
+        \draw[->] (M) edge node (g) [left] {$g$} (Q);
+        \draw[->,dotted] (N) edge node (h) [below] {$h$} (Q);
+      \end{tikzpicture}
+    \end{center}
    \item Zu jedem Linksideal $L\subseteq R$ und $g\in\Hom_{R}(L,Q)$ existiert
     ein $h\in\Hom_{R}(R,Q)$ mit $h|L=g$.
    \item Zu jedem Linksideal $L\subseteq R$ und jedem $g\in\Hom_{R}(L,Q)$
@@ -3337,6 +3350,19 @@ Sei $R$ ein Ring.
     \begin{itemize}
      \item [(i)$\Rightarrow$(ii)] Der Punkt (ii) ist nur ein Spezialfall von
       (i).
+    \begin{center}
+      \begin{tikzpicture}
+        \node (M) {$L$};
+        \node [left=1cm of M] (null) {$0$};
+        \node [right=1cm of M] (N) {$R$};
+        \node [below=1.5cm of M] (Q) {$Q$};
+        \draw[->] (null) edge node (nn) {} (M);
+        \draw[right hook->] (M) edge node (f) {} (N);
+        \draw[->] (M) edge node (g) [left] {$g$} (Q);
+        \draw[->,dotted] (N) edge node (h) [below] {$h$} (Q);
+      \end{tikzpicture}
+    \end{center}
+
      \item [(ii)$\Rightarrow$(iii)] Sei (ii) erfüllt, $L\subseteq R$ ein
       Linksideal und $g\in\Hom_{R}(L,Q)$. Dann existiert ein
       $h\in\Hom_{R}(R,Q)$ mit $h|L=g$. Sei $x\coloneqq h(1)\in Q$. Dann:
