Abbildungen zu Satz 10.5
git-svn-id: https://svn.lug-jena.de/uni-skripte@3421 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -3510,6 +3510,19 @@ Sei $R$ ein Ring.
     Abbildung. Da $A$ injektiv ist, existiert ein $\delta\in\Hom_{\Z}(N,A)$
     mit $\delta\circ f=g$.
 
+    \begin{center}
+      \begin{tikzpicture}
+        \node (M) {$M$};
+        \node [left=1cm of M] (null) {$0$};
+        \node [right=1cm of M] (N) {$N$};
+        \node [below=1cm of M] (A) {$A$};
+        \draw[->] (null) edge node {} (M);
+        \draw[->] (M) edge node (f) [above] {$f$} (N);
+        \draw[->] (M) edge node (g) [left] {$\gamma$} (A);
+        \draw[->,dotted] (N) edge node (d) [below] {$\delta$} (A);
+      \end{tikzpicture}
+    \end{center}
+
     Für $x\in N$ ist $h_{x}\colon R\rightarrow A$ mit $r\mapsto\delta(rx)$
     eine $\Z$"~lineare Abbildung, d.\,h. $h_{x}\in\Hom_{\Z}(R,A)$. Für $a,r\in
     R$ ist dabei $(ah_{x})(r)= h_{x}(ra)= \delta(rax)= h_{ax}(r)$, d.\,h.
@@ -3521,6 +3534,19 @@ Sei $R$ ein Ring.
       &= (rg(m))(1)= (g(m))(1r)= )g(m))(1),
     \end{align*}
     d.\,h. $g(m)= h_{f(m)}=h(f(m))$, also $g=h\circ f$.
+    \begin{center}
+      \begin{tikzpicture}
+        \node (M) {$M$};
+        \node [left=1cm of M] (null) {$0$};
+        \node [right=1cm of M] (N) {$N$};
+        \node [below=1cm of M] (A) {$\Hom_{\Z}(R,A)$};
+        \draw[->] (null) edge node {} (M);
+        \draw[->] (M) edge node (f) [above] {$f$} (N);
+        \draw[->] (M) edge node (g) [left] {$g$} (A);
+        \draw[->,dotted] (N) edge node (d) [below] {$h$} (A);
+      \end{tikzpicture}
+    \end{center}
+
   \end{proof}
 \end{satz}
 
