Abbildung zu Satz 10.11
git-svn-id: https://svn.lug-jena.de/uni-skripte@3422 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -3659,7 +3659,20 @@ Sei $R$ ein Ring.
     Wir nehmen an, dass $N$ keine maximale wesentliche Erweiterung von $M$
     ist. Dann existiert eine wesentliche Erweiterung $N\leq W$ mit $N<W$. Da
     $Q$ injektiv ist, existiert ein $f\in\Hom_{R}(W,Q)$ mit $f(n)=n$ für
-    $n\in\N$.  Insbesondere ist $\ker(f) \cap N=0$, also auch
+    $n\in\N$.
+    \begin{center}
+      \begin{tikzpicture}
+        \node (N) {$N$};
+        \node [left=1cm of N] (null) {$0$};
+        \node [right=1cm of N] (W) {$W$};
+        \node [below=1cm of N] (Q) {$Q$};
+        \draw[->] (null) edge node {} (N);
+        \draw[right hook->] (N) edge node {} (W);
+        \draw[right hook->] (N) edge node {} (Q);
+        \draw[->,dotted] (W) edge node (f) [below] {$f$} (Q);
+      \end{tikzpicture}
+    \end{center}
+    Insbesondere ist $\ker(f) \cap N=0$, also auch
     $M\cap\ker(f)=0$. Da $M$ wesentlich in $W$ ist, folgt, $\ker(f)=0$, d.\,h.
     $f$ ist injektiv. Folglich ist $f(W)\supseteq f(M)=M$ eine wesentlich
     Erweiterung mit $N=f(N)\subset f(W)\subseteq Q$. Das steht im Widerspruch
