Abbildungen zu Satz 11.2
git-svn-id: https://svn.lug-jena.de/uni-skripte@3423 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -3735,10 +3735,31 @@ Sei $R$ ein Ring.
     $M'\subseteq Q'$ eine injektive Hülle, so existiert ein
     $R$"~Monomorphismus $f'\colon Q\rightarrow Q'$ mit $f'(m)=f(m)$ für $m\in
     M$. Ist $f$ sogar ein Isomorphismus, so auch $f'$.
-    \missingfigure{Komm Dia, siehe Zeichnung}
+    \begin{center}
+      \begin{tikzpicture}
+        \node (M) {$M$};
+        \node [below=1cm of M] (Q) {$Q$};
+        \node [right=1cm of M] (MS) {$M'$};
+        \node [below=1cm of MS] (QS) {$Q'$};
+        \draw[->] (M) edge node (f) [above]{$f$} (MS);
+        \draw[right hook->] (M) edge node  {} (Q);
+        \draw[right hook->] (MS) edge node {} (QS);
+        \draw[->,dotted] (Q) edge node (fs) [above]{$f'$} (QS);
+      \end{tikzpicture}
+    \end{center}
    \item Ist $Q'\in\vorunten{R}\kat{Mod}$ injektiv und $M\subseteq Q'$ ein
     Untermodul, so existiert ein $R$"~Monomorphismus $g\colon Q\rightarrow Q'$
     mit $g(m)= m$ für $m\in M$.
+    \begin{center}
+      \begin{tikzpicture}
+        \node (M) {$M$};
+        \node [below left=of M] (Q) {$Q$};
+        \node [below right=of M] (QS) {$Q'$};
+        \draw[right hook->] (M) edge node {} (Q);
+        \draw[right hook->] (M) edge node {} (QS);
+        \draw[->,dotted] (Q) edge node (g) [above] {$g$} (QS);
+      \end{tikzpicture}
+    \end{center}
   \end{enumerate}
   \begin{proof}
     \begin{enumerate}
@@ -3746,6 +3767,21 @@ Sei $R$ ein Ring.
       existiert ein $f'\in\Hom_{R}(Q,Q')$ mit $f'(m)=f(m)$ für $m\in M$. Dann
       ist $\ker(f')\cap M=\ker(f)=0$. Da $M\subseteq Q$ wesentlich ist, folgt,
       $\ker(f)=0$, d.\,h. $f$ ist injektiv.
+
+      \begin{center}
+        \begin{tikzpicture}
+          \node (M) {$M$};
+          \node [left=of M] (null) {$0$};
+          \node [right=of M] (Q1) {$Q$};
+          \node [below=of M] (MS) {$M'$};
+          \node [below=of MS] (Q2) {$Q$};
+          \draw[->] (null) edge node {} (M);
+          \draw[right hook->] (M) edge node {} (Q1);
+          \draw[->] (M) edge node (f) [left]{$f$} (MS);
+          \draw[right hook->] (MS) edge node {} (Q2);
+          \draw[->,dotted] (Q1) edge node (fs) [below]{$f'$} (Q2);
+        \end{tikzpicture}
+      \end{center}
 
       Sei jetzt $f$ bijektiv. Dann ist $Q\simeq f'(Q)\subseteq Q'$ ein
       injektiver Untermodul und $f'(Q)\supseteq f'(M)=f(M)=M'$. Da
