Bei frac fehlte eine 1.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3435 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -1327,7 +1327,7 @@ dienen hier nur der Auffrischung.
 	x_{1}+(1-\lambda)x_{2}) +(1-\frac{1}{2(1-\lambda)}) x_{1}}\leq
 	\frac{1}{2(1-\lambda)} \norm{\lambda x_{1}+(1-\lambda)x_{2}}+
 	1-\frac{1}{2(1-\lambda)} \norm{x_{1}}\leq1$
-       \item $\nicefrac{1}{2}\leq\lambda\leq1$: $\norm{\frac{}{2\lambda}
+       \item $\nicefrac{1}{2}\leq\lambda\leq1$: $\norm{\frac{1}{2\lambda}
 	(\lambda x_{1}+(1-\lambda)x_{2})+ (1-\frac{1}{2\lambda})x_{2}}
 	\leq\frac{1}{2\lambda} \norm{\lambda x_{1}+(1-\lambda)x_{2}}
 	+(1-\frac{1}{2\lambda}) \norm{x_{2}}\leq1$.
