Formulierung für Bedingung an das m geändert
Ich fand die Formulierung zu sperrig. Aus meiner Sicht drückt die
jetzige Formulierung den Sachveralt ebenso aus und ist klarer.

git-svn-id: https://svn.lug-jena.de/uni-skripte@3438 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -1407,7 +1407,7 @@ dienen hier nur der Auffrischung.
 %satz 4
 \begin{satz}\label{satz:4}
   Es seien $(X,\norm{\cdot})$ ein streng konvexer normierter Raum,
-  $m\in\{2,3,4,\dotsc\}$ mit $m\leq\dim X$ und $M\subseteq B(0,1)$ mit $0\in M$
+  $2\leq m\leq\dim X$ und $M\subseteq B(0,1)$ mit $0\in M$
   und $\bd(B(0,1))\subseteq\cl(M)$. Dann ist $M$ nicht isometrisch $m$"~teilbar.
   \begin{proof}
     Wir nehmen an, dass $M$ doch $m$"~teilbar ist. Damit können wir $M$ als
