Bedingung \geq m entfernt
Diese Bedingung spielt hier keine Rolle und ist eher verwirrend. Daher
habe ich diese entfernt.

git-svn-id: https://svn.lug-jena.de/uni-skripte@3441 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -1430,7 +1430,7 @@ dienen hier nur der Auffrischung.
     \cl(\phi_{i}(M_{1}))\subseteq \phi_{i}(B(0,1))= B(\phi_{i}(0),1)$.
 
     Wir betrachten den \autoref{satz:hs2} mit $Y=
-    \spn\{\phi_{2}(0),\dotsc,\phi_{m}(0)\}\subsetneq X$, da $\dim X\geq m>\dim
+    \spn\{\phi_{2}(0),\dotsc,\phi_{m}(0)\}\subsetneq X$, da $\dim X>\dim
     Y$. Somit existiert wegen \autoref{eq:5} ein $x_{0}\in\bd(B(0,1))$ mit
     $x_{0}, -x_{0}\notin B(\phi_{2}(0),1)\cup\dotsb\cup B(\phi_{m}(0),1)$.
     Nach \autoref{eq:6} liegen $x_{0},-x_{0}\in\cl(M_{1})$ und aufgrund der
