--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -1431,7 +1431,7 @@ dienen hier nur der Auffrischung.
 
     Wir betrachten den \autoref{satz:hs2} mit $Y=
     \spn\{\phi_{2}(0),\dotsc,\phi_{m}(0)\}\subsetneq X$, da $\dim X>\dim
-    Y$. Somit existiert wegen \autoref{eq:5} ein $x_{0}\in\bd(B(0,1))$ mit
+    Y$. Somit existiert wegen \autoref{satz:hs2} ein $x_{0}\in\bd(B(0,1))$ mit
     $x_{0}, -x_{0}\notin B(\phi_{2}(0),1)\cup\dotsb\cup B(\phi_{m}(0),1)$.
     Nach \autoref{eq:6} liegen $x_{0},-x_{0}\in\cl(M_{1})$ und aufgrund der
     Isometrien liegen dann
