--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -1459,13 +1459,13 @@ dienen hier nur der Auffrischung.
   x_{0}, -x_{0}\notin B(y,1)$.
   \begin{proof}
     Wir wählen $x_{1}\in X\setminus Y$ und betrachten die Funktion $f\colon
-    Y-Y\R$ mit $f(y)\coloneqq\norm{x_{1}-y}$. Diese ist stetig. Es existiert
+    Y\rightarrow\R$ mit $f(y)\coloneqq\norm{x_{1}-y}$. Diese ist stetig. Es existiert
     ein $y_{1}\in Y$, so dass $f(y_{1})= \min_{y\in Y} f(y)$. Das ist
     inbesondere auch das Infimum $\inf_{y\in Y}\norm{x_{1}-y}=\colon
     d(x_{1},Y)$. Denn $d(x_{1},Y)\leq\norm{x_{1}-0}= \norm{x_{1}}$. Also ist
-    $d(x_{1},Y)= \inf_{y\in Y, y\in B(x_{1}, \norm{x_{1}}} \norm{x_{1}-y})=
-    \inf_{y\in B(x_{1}, \norm{x_{1}}\cap Y)} f(y)$. Dabei ist $B(x_{1},
-    \norm{x_{1}}\cap Y)$ beschränkt und abgeschlossen, also auch kompakt. Jede
+    $d(x_{1},Y)= \inf_{y\in Y, y\in B(x_{1}, \norm{x_{1}})} (\norm{x_{1}-y})=
+    \inf_{y\in B(x_{1}, \norm{x_{1}})\cap Y} f(y)$. Dabei ist $B(x_{1},
+    \norm{x_{1}})\cap Y$ beschränkt und abgeschlossen, also auch kompakt. Jede
     stetige Funktion $f$ auf einer kompakten Menge mit Werten in $\R$ nimmt
     ihre Extrema als Funktionswerte an. Also gibt es ein $y_{1}\in Y$ mit
     $f(y_{1})= \min_{y\in B(x_{1}, \norm{x_{1}})\cap Y} f(y)= \min_{y\in Y}
@@ -1475,7 +1475,7 @@ dienen hier nur der Auffrischung.
     Damit ist $\norm{x_{0}}=1$ und $x\in\bd(B(0,1))$.  Also:
     \begin{align*}
       d(x_{0},Y) &= \inf_{y\in Y}
-	 \norm{\frac{x_{1}-y_{1}}{\norm{x_{1}-y_{1}}}-y}=
+	 \norm[\bigg]{\frac{x_{1}-y_{1}}{\norm{x_{1}-y_{1}}}-y}=
 	 \frac{1}{\norm{x_{1}-y_{1}}} \inf_{\tilde{y}\in Y} \norm{x_{1}-y_{1}-\tilde{y}}\\
       &= \frac{1}{\norm{x_{1}-y_{1}}} \inf_{\tilde{\tilde{y}}\in Y}
 	 \norm{x_{1}-\tilde{\tilde{y}}}= \frac{1}{\norm{x_{1}-y_{1}}} \norm{x_{1}-y_{1}}=1= \norm{x_{0}}
