Fehlendes Komma ergänzt
git-svn-id: https://svn.lug-jena.de/uni-skripte@3445 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/kuelshammer-gruppentheorie/skript.ltx
+++ b/kuelshammer-gruppentheorie/skript.ltx
@@ -3374,7 +3374,7 @@ Codierungstheorie, \textsc{Banach}räume etc.
   \begin{itemize}
    \item $\vorhoch{1}\omega=\omega$
    \item $\vorhoch{a}(\vorhoch{b}\omega)= \vorhoch{ab}\omega$ für alle $a,b\in G, \omega\in\Omega$.
-    Man sagt auch $G$ operiert auf $\Omega$ oder $\Omega$ ist eine $G$"~Menge.
+    Man sagt auch, $G$ operiert auf $\Omega$ oder $\Omega$ ist eine $G$"~Menge.
   \end{itemize}
 \end{defini}
 
