Verweis zur Fixpunkteigenschaft eingebaut.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3450 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -539,7 +539,7 @@ dienen hier nur der Auffrischung.
 
 % Vorlesung vom 18.4.2011
 \section{Eine hinreichende Bedingung für m-Teilbarkeit}\label{sec:1.2}
-\subsection{Die Fixpunkteigenschaft}
+\subsection{Die Fixpunkteigenschaft}\label{sec:die-fixpunkteigenschaft}
 %def 4
 \begin{defini}[Fixpunkt]
   \begin{enumerate}
@@ -2021,8 +2021,8 @@ dienen hier nur der Auffrischung.
     $\lim_{x\rightarrow\pm\infty} \tau(x)=\mp\infty$.
 
     Topologische $1$"~Zellen sind die Intervalle $[a,b]$ mit $a<b$. Jede
-    topologische $1$"~Zelle hat die Fixpunkteigenschaft bezüglich $\CT_{1}$ (§
-    1.\,2.\,1\todo{link})
+    topologische $1$"~Zelle hat die Fixpunkteigenschaft aus
+    \autoref{sec:die-fixpunkteigenschaft} bezüglich $\CT_{1}$.
    \item $M\subseteq\R^{n}$ topologische $n$"~Zelle $\Leftrightarrow\forall
     Z_{n}\subseteq\R^{n}$ topologischen $n$"~Zellen
     $\exists\tau\in\CT_{n}\colon(M=\tau(Z_{n}))$.
