--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -1537,7 +1537,7 @@ dienen hier nur der Auffrischung.
    \item $\epsilon$-\highl{Parallelmenge} von $M\subseteq\R^{n}$ mit
     $\epsilon>0$: $M_{\epsilon}\coloneqq\Set{x\in\R^{n} | \exists y\in
     M(\norm{x-y}_{2}\leq\epsilon)}$
-    \missingfigure[figwidth=.7\textwidth]{Abbildung der Parallelmengen}
+
    \item \highl[Hausdorff-Abstand]{\textsc{Hausdorff}"~Abstand} zwischen
     Körpern $K_{1}, K_{2}\in\CK_{o}^{n}$:
     \begin{gather*}
@@ -1548,6 +1548,35 @@ dienen hier nur der Auffrischung.
     $(K_{2})_{\delta}$ die $\delta$-Parallelmenge.
   \end{enumerate}
 \end{defini}
+
+\begin{bsp}
+  Wir betrachten die $\epsilon$"=Parallelmengen eines Quadrats~$Q$ mit
+  $Q_{\epsilon_{1}}$ sowie eines Kreises~$K$ mit
+  $K_{\epsilon_{2}}$. Diese sind in \autoref{fig:eps-para} jeweils
+  durch gestrichelte Linien markiert.
+
+  In der Abbildung lässt sich des Weiteren der
+  \textsc{Hausdorff}"=Abstand $d_{H}(K,Q)$ erkennen. Der beträgt hier
+  $\epsilon_{2}$.
+  \begin{figure}[htb]
+    \centering
+    \begin{tikzpicture}
+      \draw[help lines] (-1.4,-2.4) grid (6.4,4.4); \draw (3,0.6)
+      circle (.7cm); \draw[->] (-1.5,0) -- (6.5,0) node[right] {$x$}
+      coordinate(x axis); \draw[->] (0,-2.5) -- (0,4.5) node[above]
+      {$y$} coordinate(y axis); \draw (1,1) -- (1,3) -- (3,3) -- (3,1)
+      -- (1,1); \draw[dashed] (3,-.1) arc (270:360:1.1) (4.1,3) arc
+      (0:90:1.1) (1,4.1) arc (90:180:1.1) (-.1,1) arc (180:270:1.1)
+      (1,-.1) -- (3,-.1) (4.1,1) -- (4.1,3) (1,4.1) -- (3,4.1) (-.1,1)
+      -- (-.1,3); \draw[dashed] (3,.6) circle (3.124cm); \draw (2,2)
+      node (q) {$Q$} (3,.6) node (k) {$K$} (1.1,.6) node (qe)
+      {$Q_{\epsilon_{1}}$} (2.7,-1.1) node (ke) {$K_{\epsilon_{2}}$};
+    \end{tikzpicture}
+    \caption{$\epsilon$-Parallelmengen eines Quadrats und eines Kreises}
+\label{fig:eps-para}
+\end{figure}
+
+\end{bsp}
 
 %lemma a
 \begin{lemma}
@@ -3662,7 +3691,7 @@ Die Frage ist, ob der \autoref{satz:3.1} analog im $\R^{3}$ gilt.
       Da der Rand von $D$ homöomorph zur Kreislinie ist, folgt, dass
       $\lim_{k\rightarrow \infty} x_{i_{k}}=x_{0}=y_{0}=\lim_{k\rightarrow
       \infty} y_{i_{k}}$. Das ist ein Widerspruch zur Wahl von $x$ und $y$.
-     \item Sei $J$ eine Strecke und wir wollen zeigen, dass diese
+  \item Sei $J$ eine Strecke und wir wollen zeigen, dass diese
       $(\Aff^{1},\CD)$"~unwesentlich ist. Dazu wählen wir ein
       $\beta\in\FB_{2}^{+}\subseteq\Aff^{1}$ mit
       $\beta(J)\subseteq\R\times\{0\}$ ($x$"~Achse) und $\beta_{i}\in\Aff^{1}$
