Definition für Baireschen Raum verbessert
git-svn-id: https://svn.lug-jena.de/uni-skripte@3463 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -1593,8 +1593,9 @@ dienen hier nur der Auffrischung.
     \highl[Menge!magere]{mager}\index{mager}, wenn es nirgends dichte
     Teilmengen $N_{1},N_{2},\dotsc$ von $X$ mit der Eigenschaft
     $M=\bigcup_{i=1}^{\infty} N_{i}$ gibt..
-   \item $(X,d)$ heißt genau dann \highl{Bairesch}, wenn $\forall M\subseteq
-    X\colon(M)$ von 1.\,Kategorie gilt, dass $X\setminus M$ dicht in $X$ ist.
+   \item Ein metrischer Raum~$(X,d)$ heißt genau dann
+     \highl{Bairesch}, wenn für alle mageren Teilmengen~$M\subseteq X$
+     gilt, dass $X\setminus M$ dicht in $X$ liegt.
   \end{enumerate}
 \end{defini}
 
