--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -2119,7 +2119,7 @@ dienen hier nur der Auffrischung.
      \item $(n,m)=(2,2)$: Nach dem \autoref{satz:hs5} funktioniert dies auch
       für $n\geq2$. In der \autoref{fig:satz8-rhombus} sind die
       Beweisschritte grafisch dargestellt. Die Grafik ist von
-      Seite~155 aus \cite{richt98}  entnommen.\todo{Grafik noch vervollständigen}
+      Seite~155 aus \cite{richt98}  entnommen.
       \begin{itemize}
        \item o.\,B.\,d.\,A.: $Z_{2}=\Set{(\xi,\eta)\in\R^{2} | \abs{\eta}\leq
 	\nicefrac{1}{4}(1-\abs{\xi})}$ ist ein Rhombus.
@@ -2163,27 +2163,27 @@ dienen hier nur der Auffrischung.
   \draw (0,0) -- (4,1) -- (8,0) -- (4,-1) -- (0,0);
   \draw[thick] (6,.5) -- (4,1) -- (4,-1) -- (6,-.5)
   [yshift=4cm]  (6,.5) -- (4,1) -- (4,-1) -- (6,-.5);
-  \draw[thick,dashed] (6,.5) -- (6,-.5)
+  \draw[thick,densely dotted] (6,.5) -- (6,-.5)
   [yshift=4cm]  (6,.5) -- (6,-.5);
   \draw[thick] (7.5,.125) -- (7,.25) -- (7,-.25) -- (7.5,-.125)
   [yshift=4cm]  (7.5,.125) -- (7,.25) -- (7,-.25) -- (7.5,-.125);
-  \draw[thick,dashed] (7.5,.125) -- (7.5,-.125)
+  \draw[thick,densely dotted] (7.5,.125) -- (7.5,-.125)
   [yshift=4cm](7.5,.125) -- (7.5,-.125);
   \draw[thick] (7.875,.03125) -- (7.75,.0625) -- (7.75,-.0625) --
   (7.875,-.03125)
   [yshift=4cm] (7.875,.03125) -- (7.75,.0625) -- (7.75,-.0625) --
   (7.875,-.03125);
-  \draw[thick,dashed] (7.875,.03125) -- (7.875,-.03125)
+  \draw[thick,densely dotted] (7.875,.03125) -- (7.875,-.03125)
   [yshift=4cm] (7.875,.03125) -- (7.875,-.03125);
   \draw[fill] (8,0) circle (.03cm)
   [yshift=4cm] (8,0) circle (.03cm);
   \draw[thick] (2,.5) -- (1,.25) -- (1,-.25) -- (2,-.5)
   [yshift=4cm] (2,.5) -- (1,.25) -- (1,-.25) -- (2,-.5);
-  \draw[thick,dashed] (2,.5) -- (2,-.5)
+  \draw[thick,densely dotted] (2,.5) -- (2,-.5)
   [yshift=4cm]  (2,.5) -- (2,-.5);
   \draw[thick] (.5,.125) -- (.25,.0625) -- (.25,-.0625) --  (.5,-.125)
   [yshift=4cm]  (.5,.125) -- (.25,.0625) -- (.25,-.0625) --  (.5,-.125);
-  \draw[thick,dashed] (.5,.125) -- (.5,-.125)
+  \draw[thick,densely dotted] (.5,.125) -- (.5,-.125)
   [yshift=4cm] (.5,.125) -- (.5,-.125);
   \draw (5,0) node {$T_{0}$}
   [yshift=4cm]  (5,0) node {$T_{0}$};
@@ -2199,45 +2199,78 @@ dienen hier nur der Auffrischung.
   \draw[thick] (.25,16.0625) -- (.125,16.03125) -- (.125,15.96875) --  (.25,15.9375)
   [rotate around={180:(.125,15.96875)},yshift=3.9375cm,xshift=-7.75cm] (.25,16.0625) -- (.125,16.03125) -- (.125,15.96875) --  (.25,15.9375)
   [yshift=4cm] (.25,16.0625) -- (.125,16.03125) -- (.125,15.96875) --  (.25,15.9375);
-  \draw[thick,dashed] (.25,16.0625) -- (.25,15.9375)
+  \draw[thick,densely dotted] (.25,16.0625) -- (.25,15.9375)
   [xshift=7.5cm,yshift=-4cm] (.25,16.0625) -- (.25,15.9375)
   [yshift=-4cm] (.25,16.0625) -- (.25,15.9375);
 
   \draw[thick] (1,16.25) -- (.5,16.125) -- (.5,15.875) -- (1,15.75)
   [rotate around={180:(.5,15.875)},yshift=3.75cm,xshift=-7cm] (1,16.25) -- (.5,16.125) -- (.5,15.875) -- (1,15.75)
   [yshift=4cm] (1,16.25) -- (.5,16.125) -- (.5,15.875) -- (1,15.75);
-  \draw[thick,dashed] (1,16.25) -- (1,15.75)
+  \draw[thick,densely dotted] (1,16.25) -- (1,15.75)
   [xshift=6cm,yshift=-4cm] (1,16.25) -- (1,15.75)
   [yshift=-4cm] (1,16.25) -- (1,15.75);
   \draw[thick] (4,17) -- (2,16.5) -- (2,15.5) -- (4,15)
   [rotate around={180:(2,15.5)},yshift=3cm,xshift=-4cm] (4,17) -- (2,16.5) -- (2,15.5) -- (4,15)
   [yshift=4cm] (4,17) -- (2,16.5) -- (2,15.5) -- (4,15);
-  \draw[thick,dashed] (4,17) -- (4,15)
+  \draw[thick,densely dotted] (4,17) -- (4,15)
   [yshift=-4cm] (4,17) -- (4,15)
   [yshift=-4cm] (4,17) -- (4,15);
 
   \draw[thick] (7,16.25) -- (6,16.5) -- (6,15.5) -- (7,15.75)
   [rotate around={180:(6,15.5)},yshift=3cm,xshift=4cm] (7,16.25) -- (6,16.5) -- (6,15.5) -- (7,15.75)
   [yshift=4cm] (7,16.25) -- (6,16.5) -- (6,15.5) -- (7,15.75);
-  \draw[thick,dashed] (7,16.25) -- (7,15.75)
+  \draw[thick,densely dotted] (7,16.25) -- (7,15.75)
   [xshift=-6cm,yshift=-4cm] (7,16.25) -- (7,15.75)
   [yshift=-4cm] (7,16.25) -- (7,15.75);
 
   \draw[thick] (7.75,16.0625) -- (7.5,16.125) -- (7.5,15.875) -- (7.75,15.9375)
   [rotate around={180:(7.5,15.875)},yshift=3.75cm,xshift=7cm] (7.75,16.0625) -- (7.5,16.125) -- (7.5,15.875) -- (7.75,15.9375)
   [yshift=4cm] (7.75,16.0625) -- (7.5,16.125) -- (7.5,15.875) -- (7.75,15.9375);
-  \draw[thick,dashed] (7.75,16.0625) -- (7.75,15.9375)
+  \draw[thick,densely dotted] (7.75,16.0625) -- (7.75,15.9375)
   [xshift=-7.5cm,yshift=-4cm] (7.75,16.0625) -- (7.75,15.9375)
   [yshift=-4cm] (7.75,16.0625) -- (7.75,15.9375);
-  \draw (3.5,16) node {$S_{0}$};
-  \draw[xshift=1cm,yshift=-4cm] (3.5,16) node {$\sigma(S_{0})$}
-  [yshift=-4cm] (3.5,16) node {$\sigma(S_{0})$};
+  \draw (3,16) node {$S_{0}$};
+  \draw[xshift=2cm,yshift=-4cm] (3,16) node {$\sigma(S_{0})$}
+  [yshift=-4cm] (3,16) node {$\sigma(S_{0})$};
   \draw (6.5,16) node {$S_{1}$};
   \draw[xshift=-5cm,yshift=-4cm] (6.5,16) node {$\sigma(S_{1})$}
   [yshift=-4cm] node {$\sigma(S_{1})$};
 
+  \draw[xshift=7.625cm,yshift=-8cm] (.0625,15.84375) rectangle
+  (.3125,16.15625)
+  [yshift=-4cm] (.0625,15.84375) rectangle (.3125,16.15625);
+
+  \draw[xshift=6.5cm,yshift=-8cm] (.375,15.625) rectangle
+  (1.125,16.375)
+  [yshift=-4cm] (.375,15.625) rectangle (1.125,16.375);
+
   \draw[xshift=2cm,yshift=-8cm] (1.5,14.5) rectangle (4.5,17.5)
   [yshift=-4cm] (1.5,14.5) rectangle (4.5,17.5);
+
+  \draw[xshift=-5cm,yshift=-8cm] (5.75,15.25) rectangle (7.25,16.75)
+  [yshift=-4cm] (5.75,15.25) rectangle (7.25,16.75);
+
+  \draw[xshift=-7.25cm,yshift=-8cm] (7.4375,15.8125) rectangle
+  (7.8125,16.1885)
+  [yshift=-4cm] (7.4375,15.8125) rectangle (7.8125,16.1885);
+  
+  \draw[->] (.375,7.75) -- (.375,4.25);
+  \draw[->] (1.5,7.125) -- node [right] {$\phi|_{R_{1}}$} (1.5,4.875);
+  \draw[->] (5,6.375) -- node[right] {$\phi|_{R_{0}}$} (5,5.625);
+  \draw[->] (7.25,7.5) -- (7.25,4.5);
+  \draw[->] (7.81,7.75) -- (7.81,4.25);
+  \draw[->] (8,7.9) -- (8,4.1);
+
+  \draw (1,7) node {$R_{1}$}
+  (1,3) node  {$R_{1}$}
+  (3.75,6.25) node {$R_{0}$}
+  (3.75,2.25) node {$R_{0}$};;
+
+  \draw (-2,16) node (s) {$S$};
+  \draw (-2,12) node (ss) {$\sigma(S)$};
+  \draw (-2,0) node (t) {$T$};
+  \draw[->] (s) edge node (sigma) [right] {$\sigma$} (ss);
+  \draw[->] (ss) edge node (phi) [right] {$\phi$} (t);
 \end{tikzpicture}
   \caption{Abbildung zum Beweis von \autoref{satz:8}}
   \label{fig:satz8-rhombus}
