--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -3907,6 +3907,50 @@ Die Frage ist, ob der \autoref{satz:3.1} analog im $\R^{3}$ gilt.
     viele Bögen zerbrechen. Da die Abbildung injektiv ist, muss also $W$
     endlich sein.
 
+    \begin{figure}[htb]
+      \centering
+      \begin{tikzpicture}[scale=2]
+  \draw[thick] (0,0) -- (0,2)
+  (1,1) -- (1,0) -- (2,0) -- (2,2)
+  (0,0) arc (180:90:1cm)
+  (2,2) arc (0:180:1cm);
+  \draw (0,2) -- (2,2)
+  (1,1) arc (90:0:1cm);
+  \draw (1,2.5) node {$D_{1}$}
+  (1,1.5) node {$D_{2}$}
+  (1.35,.5) node {$D_{3}$};
+
+  \draw[thick] (6,0) -- (3,0) -- (3,2) -- (5,2) -- (5,1)
+  (6,0) arc (0:90:1cm);
+  \draw (5,1) -- (5,0)
+  (5,0) arc (0:180:1cm);
+  \draw (4,1.5) node {$D_{-2}$}
+  (4,.5) node {$D_{-1}$}
+  (5.5,.5) node  {$D_{-3}$};
+
+  \draw (0,0) circle (.05cm) node[below] {$7'$}
+  (1,0)  circle (.05cm) node[below] {$5'$}
+  (2,1)  circle (.05cm) node[right] {$6'$}
+  (1,3)  circle (.05cm) node[above] {$4''$}
+  (3,2)  circle (.05cm) node[above] {$3'$}
+  (5,2)  circle (.05cm) node[above] {$2'$}
+  (6,0)  circle (.05cm) node[below] {$1'$};
+
+  \draw[fill] (2,0)  circle (.05cm) node[below] {$1$}
+  (1,1)  circle (.05cm) node[above] {$4$}
+  (0,2)  circle (.05cm) node[left] {$3$}
+  (2,2)  circle (.05cm) node[right] {$2$}
+  (3,0)  circle (.05cm) node[below] {$7$}
+  (5,0)  circle (.05cm) node[below] {$5$}
+  (5,1)  circle (.05cm) node[above right] {$6$}
+  (4,1)  circle (.05cm) node[above] {$[4']$};
+\end{tikzpicture} 
+      \caption{Scheiben mit den Mengen $R_{0}$ (fette Linie), $R_{1}$
+        (dünne Linie), $V$ (\tikz \fill (.5ex,.5ex) circle (.5ex);)
+        und $W$ (\tikz \draw (.5ex,.5ex) circle (.5ex);)}
+      \label{fig:lemma41}
+    \end{figure}
+
     Die Menge $R_{0}\setminus(V\cup W)$ zerfällt in endlich viele
     Zusammenhangskomponenten. Das sind (relativ) offene Bögen $A_{1},\dotsc,
     A_{l}$. Dabei seien für $1\leq m\leq l$ o.\,B.\,d.\,A. die $A_{1},\dotsc, A_{m}$ keine Strecken und
