Die Abbildung heißt affi_n_.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3488 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-ana2/skript.tex
+++ b/carl-ana2/skript.tex
@@ -694,7 +694,7 @@ B\circ A\in\LL(E,G)$ und es gilt $\norm{BA}\leq \norm{B}\cdot \norm{A}$.
 
 \begin{remark}
   Die Differentiation von $f$ im Punkt $x\in D$ bedeutet eine
-Approximation durch eine affive lineare Abbildung $f(x)+Ah$ mit der
+Approximation durch eine affine lineare Abbildung $f(x)+Ah$ mit der
 Eigenschaft, dass \[\lim_{h\rightarrow 0}\frac{f(x+h)-f(x)-Ah}{\norm{h}}=0.\]
 Setzt man $\tilde{r}(h)\coloneqq \begin{cases}
   \frac{r(h)}{\norm{h}} & 0<\norm{h}\leq\delta\\
