--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -3956,9 +3956,9 @@ Die Frage ist, ob der \autoref{satz:3.1} analog im $\R^{3}$ gilt.
   (5,1)  circle (.05cm) node[above right] {$6$}
   (4,1)  circle (.05cm) node[above] {$[4']$};
 \end{tikzpicture} 
-      \caption{Scheiben mit den Mengen $R_{0}$ (fette Linie), $R_{1}$}
-        % (dünne Linie), $V$ (\protect \tikz \fill (.5ex,.5ex) circle (.5ex);)
-        % und $W$ (\protect \tikz \draw (.5ex,.5ex) circle (.5ex);)}
+      \caption{Scheiben mit den Mengen $R_{0}$ (fette Linie), $R_{1}$
+        (dünne Linie), $V$ (\protect \tikz \fill (.5ex,.5ex) circle (.5ex);)
+        und $W$ (\protect \tikz \draw (.5ex,.5ex) circle (.5ex);)}
       \label{fig:lemma41}
     \end{figure}
 
