Weiteren Literaturverweis eingebaut.
git-svn-id: https://svn.lug-jena.de/uni-skripte@3495 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -5045,11 +5045,14 @@ für $n=1325$.
   discrepancy: a solution to Tarski's circle squaring problem. Journal für die
   Reine und Angewandte Mathematik, Bd. 404, 1990, S.\,77--117.
 \bibitem{borsuk33} \textsc{Karol Borsuk}: Drei Sätze über die
-  $n$-dimensionale Sphäre. Fundamenta Mathematica, 1Band 20,
+  $n$-dimensionale Sphäre. Fundamenta Mathematica, Band 20,
   1933. Seiten 177--190.
 \bibitem{hinricht} \textsc{Aicke Hinrichs}, \textsc{Christian
     Richter}: New sets with large Borsuk numbers. Discrete
   Mathematics, Band 270, 2003. Seiten 137--147.
+\bibitem{richhert}\textsc{Eike Hertel}, \textsc{Christian Richter}:
+  Squaring the Circle by Dissection. Beiträge zur Algebra und
+  Geometrie, Band 44, 2003. Seiten 47--55.
 \end{thebibliography}
 
 % \clearpage
