Kleinere Fehler im Beweis zu translativer Teilbarkeit entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@3499 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -84,6 +84,7 @@
 \usepackage{tikz}
 \usepackage{multirow}
 \usepackage{bigdelim}
+\usepackage{cancel}
 
 % Damit auch die Zeichen im Mathemode in Überschriften fett sind
 % <news:lzfyyvx3pt.fsf@tfkp12.physik.uni-erlangen.de>
@@ -857,9 +858,9 @@ dienen hier nur der Auffrischung.
   \begin{proof}
     \begin{itemize}
      \item[(i)$\Rightarrow$(ii)] Wir nehmen an, dass die erste Aussage gilt,
-      aber $K$ keine Halbgerade enthält. Ausführlicher heißt das, dass $K$ ohne
-      Halbgerade gegeben ist und sich $K=M_{1}\dotcup\dotsb\dotcup M_{m}$ mit
-      $M_{i}=M_{1}+t_{i}$ für $i=1,\dotsc,m$ disjunkt zerlegen lässt. Die $t_{i}\in X$ sind
+      aber $K$ keine Halbgerade enthält. Damit lässt sich
+      $K=M_{1}\dotcup\dotsb\dotcup M_{m}$ mit
+      $M_{i}=M_{1}+t_{i}$ für $i=1,\dotsc,m$ disjunkt zerlegen. Die $t_{i}\in X$ sind
       Translationsvektoren und $t_{1}=0$. Weiterhin nehmen wir o.\,B.\,d.\,A.
       an, $0\in M_{1}\subseteq K$. Falls das nicht der Fall wäre, machen wir
       eine Verschiebung. Zweitens ist o.\,B.\,d.\,A.  $X=\spn\{t_{1},\dotsc,
@@ -879,7 +880,8 @@ dienen hier nur der Auffrischung.
 
       \begin{enumerate}[1.\,F{a}ll]
        \item $\dim X=1$: Wir identifizieren den Fall mit der reellen Achse $X=\R$.
-	Wir wissen, das $K$ beschränkt und abgeschlossen ist, also $K= [a,b]$
+	Wir wissen, das $K$ beschränkt und finit abgeschlossen oder
+        finit offen ist, also $K= [a,b]$
 	oder $K=(a,b)$. Wir setzen o.\,B.\,d.\,A. voraus, dass
 	$t_{1}<t_{2}<\dotsb< t_{m}$. Sonst findet eine Umgruppierung statt.
 
@@ -979,7 +981,8 @@ dienen hier nur der Auffrischung.
 	     \end{cases}
 	\end{gather*}
 	Da $K$ beschränkt ist, ist das Supremum $\sup f(M_{i})\leq\sup
-	f(K)<\infty$ und $\sup f(M_{i})= \sup f(M_{1}+t_{i})= \sup f(M_{1})+t_{i}$. Damit ergibt sich:
+	f(K)<\infty$ und $\sup f(M_{i})= \sup f(M_{1}+t_{i})= \sup
+        f(M_{1})+f(t_{i})$\help{Ist das $f(t_{i})$ OK?}. Damit ergibt sich:
 	\begin{gather*}
 	  \sup f(M_{i})=
 	     \begin{cases}
@@ -997,7 +1000,7 @@ dienen hier nur der Auffrischung.
 	g)$.
 
 	Sei nun $i\in I\setminus J$. Dann ist $\sup f(M_{i})<f(x_{0})$. Da
-	$f(g)=f(x_{0})$ ist $M_{i}\cap g=\emptyset$. Also ergibt sich für
+	$f(g)=f(x_{0})$ ist, ist $M_{i}\cap g=\emptyset$. Also ergibt sich für
 	$\overline{K}= \bigcup_{j\in J} (M_{j}\cap g)= \bigcup_{j\in J}
 	\overline{M_{j}}$ disjunkte Vereinigung.
 
@@ -1006,12 +1009,12 @@ dienen hier nur der Auffrischung.
 	g\stackrel{t_{j_{2}}-t_{j_{1}}\parallel g}{=} (M_{j_{1}}\cap
 	g)-t_{j_{1}}+t_{j_{2}} =\overline{M_{j_{1}}}-t_{j_{1}}+t_{j_{2}}$.
 	Somit ist $\overline{K}$ translativ $\overline{m}$"~teilbar mit
-	$\overline{m}=\card(J)\geq2$. Die Menge $K$ ist ein offenes oder
+	$\overline{m}=\card(J)\geq2$. Die Menge $\overline{K}$ ist ein offenes oder
 	abgeschlossenes Intervall und damit haben wir einen Widerspruch zum
 	ersten Fall, da $\dim\overline{K}=1$.
       \end{enumerate}
      \item[(ii)$\Rightarrow$(i)] Wir wissen, dass $\Set{x+\lambda y |
-      \lambda\geq0}$. Es genügt zu zeigen, dass $z+k\in K$ für alle $z\in K$
+      \lambda\geq0}$. Es genügt zu zeigen, dass $z+y\in K$ für alle $z\in K$
       gilt. Mit dieser Aussage folgt dann, dass $\tau(K)\subseteq K$ für die
       Translation $\tau(z)= z+y$ und $K$ erfüllt nicht die Fixpunkteigenschaft
       bezüglich dieser Translationsgruppe $\FV_{X}$. Also ist $K$ nach
@@ -1035,7 +1038,8 @@ dienen hier nur der Auffrischung.
 	  \frac{k-1}{k}u_{k} +\frac{1}{k}(x+ky) &=
 	     \frac{k-1}{k}\left(z+\frac{z-x}{k-1}\right)+ \frac{x}{k}+ y\\
 	  &= \frac{z(k-1)}{k} +\frac{z-x}{k}+ \frac{x}{k}+ y\\
-	  &= z -\frac{z}{k}+\frac{z}{k}-\frac{x}{k} +\frac{x}{k}+y = z+y\in K\cap Y
+	  &= z -\cancel{\frac{z}{k}} +\cancel{\frac{z}{k}}
+          -\cancel{\frac{x}{k}} +\cancel{\frac{x}{k}}+y = z+y\in K\cap Y
 	\end{align*}
 	Also auch $z+y\in K$.
       \end{enumerate}
