--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -1341,10 +1341,10 @@ dienen hier nur der Auffrischung.
       $x_{1}=x_{2}$. Wir wissen $1=\norm{\frac{x_{1}+x_{2}}{2}}\leq\frac{1}{2}
       \norm{x_{1}}+
       \frac{1}{2}\norm{x_{2}}\leq\nicefrac{1}{2}+\nicefrac{1}{2}=1$. Also ist
-      $\norm{x_{1}}=\norm{x_{2}}=1$, d.\,h. $x_{1}, x_{2}\in\bd(B(0,1))$. Nun
-      nehmen wir an, dass $x_{1}\neq x_{2}$ und betrachten die Strecke
+      $\norm{x_{1}}=\norm{x_{2}}=1$, d.\,h. $x_{1},
+      x_{2}\in\bd(B(0,1))$. Nun betrachten wir die Strecke
       $\overline{x_{1}x_{2}}= \Set{\lambda x_{1}+(1-\lambda)x_{2} |
-      0\leq\lambda \leq1}$. Es ist $\norm{\lambda
+      0\leq\lambda \leq1}$ und nehmen an, dass $x_{1}\neq x_{2}$. Es ist $\norm{\lambda
       x_{1}+(1-\lambda)x_{2}}\leq\lambda\norm{x_{1}}+ (1-\lambda)\norm{x_{2}}=
       1$. Wir wissen, $1=\norm{\frac{x_{1}+x_{2}}{2}}$ und wir unterscheiden
       zwei Fälle:
