--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -4538,7 +4538,7 @@ Sei $R$ ein Ring.
 \end{bemerk}
 
 %satz 13.7
-\begin{satz}
+\begin{satz}\label{satz:13.7}
   Für jede Familie von Moduln $(M_{i})_{i\in I}$ in $\kat{Mod}_{R}$ und
   $N\in\vorunten{R}\kat{Mod}$ gilt:
   \begin{gather*}
@@ -4680,6 +4680,89 @@ Sei $R$ ein Ring.
   einen Untermodul $M$ eines $R$"~Moduls $M'$ kann man also $M\otimes_{R}N$
   i.\,A. nicht als $\Z$"~Untermodul von $M'\otimes_{R}N$ auffassen.
 \end{bsp}
+
+%def 13.9
+\begin{defini}
+  $N\in\vorunten{R}\kat{Mod}$ heißt \highl[Modul!flaches]{flach}\index{flach},
+  falls für jede  kurze exakte Sequenz $0\rightarrow M\xrightarrow{f}
+  M'\xrightarrow{f'} M''\rightarrow0$ in $\kat{Mod}_{R}$ die Sequenz
+  $0\rightarrow M\otimes_{R}N\xrightarrow{f\otimes\id_{N}}
+  M'\otimes_{R}N\xrightarrow{f''\otimes\id_{N}}M''\otimes_{R}N\rightarrow0$
+  exakt in $\vorunten{\Z}\kat{Mod}$ ist. Analog definiert man flache
+  $R$"~Rechtsmoduln.
+\end{defini}
+
+\begin{satz}
+  \begin{enumerate}
+   \item Für jede Familie $(N_{i})_{i\in I}$ in $\vorunten{R}\kat{Mod}$ gilt,
+    $\coprod N_{i}$ ist genau dann flach, wenn für alle $i\in I$ die $N_{i}$
+    flach sind.
+   \item $P\in\vorunten{R}\kat{Mod}$ projektiv $\Rightarrow P$ flach.
+  \end{enumerate}
+  \begin{proof}
+    Sei $0\rightarrow M\xrightarrow{f} M'\xrightarrow{f'} M''\rightarrow0$
+    exakt in $\kat{Mod}_{R}$.
+    \begin{enumerate}
+     \item Sei $N\coloneqq\coprod N_{i}$ mit Projektoren $p_{j}$ und
+      Injektoren $q_{j}$ für $j\in I$. Wir betrachten das folgende Diagramm in
+      $\vorunten{R}\kat{Mod}$:
+
+      \begin{tikzpicture}
+	\node (mn) {$M\otimes_{R}N$};
+	\node [right=2cm of mn] (msn) {$M'\otimes_{R}N$};
+	\node [below=1.5cm of mn] (comn) {$\coprod(M\otimes_{R}N_{i})$};
+	\node [below=1.5cm of msn] (comsn) {$\coprod(M'\otimes_{R}N_{i})$};
+	\draw[->]
+	(mn) edge node (fi) [above]{$f\otimes\id_{N}$} (msn)
+	(mn) edge node (h) [right]{$h$} (comn)
+	(msn) edge node (hs) [right]{$h'$} (comsn)
+	(comn) edge node (g) [above]{$g$} (comsn);
+      \end{tikzpicture}
+      Dabei sind $h$ und $h'$ die kanonischen Isomorphismen aus dem
+      \autoref{satz:13.7} und $g((x_{i})_{i\in
+	I})\coloneqq((f\otimes\id_{N_{i}})(x_{i}))_{i\in I}$ für
+      $(x_{i})_{i\in I}\in \coprod(M\otimes_{R}N_{i})$.
+
+      Das Diagramm kommutiert, denn für $m\in M$ und $n\in(n_{i})_{i\in I}\in
+      N$ gilt:
+      \begin{align*}
+	(h'\circ(f\otimes\id_{N}))(m\otimes n) &= h'(f(m)\otimes n)=
+	   ((\id_{M}\otimes p_{i})(f(m)\otimes n))_{i\in I}\\
+	&= (f(m)\otimes n_{i})_{i\in I}=((f\otimes\id_{N_{i}})(m\otimes n_{i}))_{i\in I}\\
+	&= g((m\otimes n_{i})_{i\in I})= g(h(m\otimes n))= (g\circ h)(m\otimes n)
+      \end{align*}
+      Also ist $f\otimes\id_{N}$ genau dann injektiv, wenn $g$ injektiv ist
+      und dies ist genau dann der Fall, wenn $f\otimes\id_{N_{i}}$ für alle
+      $i\in I$ injektiv ist.
+     \item Wir zeigen zunächst, dass $\vorunten{R}R$ flach ist. Dazu
+      betrachten wir das folgende Diagramm in $\vorunten{\Z}\kat{Mod}$:
+
+      \begin{tikzpicture}
+	\node (mn) {$M\otimes_{R} R$};
+	\node [right=2cm of mn] (msn) {$M'\otimes_{R} R$};
+	\node [below=1.5cm of mn] (comn) {$M$};
+	\node [below=1.5cm of msn] (comsn) {$M'$};
+	\draw[->]
+	(mn) edge node (fi) [above]{$f\otimes\id_{N}$} (msn)
+	(mn) edge node (h) [right]{$\mu$} (comn)
+	(msn) edge node (hs) [right]{$\mu'$} (comsn)
+	(comn) edge node (g) [above]{$f$} (comsn);
+      \end{tikzpicture}
+      Dabei sind $\mu$ und $\mu'$ die kanonischen Isomorphismen aus
+      \autoref{satz:13.7} und für $m\in M$ sowie $r\in R$ gilt:
+      \begin{align*}
+	(\mu'\circ(f\otimes\id_{R}))(m\otimes r) &= \mu'(f(m)\otimes r)=
+	   f(m)r= f(mr)= f(\mu(m\otimes r))\\
+	&= (f\circ\mu)(m\otimes r)
+      \end{align*}
+      Also kommutiert das Diagramm. Mit $f$ ist aber auch $f\otimes\id_{R}$
+      injektiv. Damit ist die Behauptung gezeigt.
+
+      Nach dem ersten Punkt ist also auch jeder freie $R$"~Modul flach. Somit
+      sind auch projektive $R$"~Linksmoduln flach.
+    \end{enumerate}
+  \end{proof}
+\end{satz}
 
 \todo[inline]{fehlende Vorlesungen einbauen}
 
